--- a/ldc2_phobos.conf.in
+++ b/ldc2_phobos.conf.in
@@ -10,7 +10,10 @@ default:
         "-I@CMAKE_BINARY_DIR@/import",
         "-I@RUNTIME_DIR@/src", // Needed for gc.*/rt.* unit tests.
         "-I@PHOBOS2_DIR@/",
-        @LIB_PATH@@MULTILIB_ADDITIONAL_PATH@@SHARED_LIBS_RPATH@
+        "-L-L@PROJECT_BINARY_DIR@/../lib@LIB_SUFFIX@",@MULTILIB_ADDITIONAL_PATH@@SHARED_LIBS_RPATH@
+        "-L-L@PROJECT_BINARY_DIR@/../lib@LIB_SUFFIX@/Debug",
+        "-L-L@PROJECT_BINARY_DIR@/../lib@LIB_SUFFIX@/Release",
+        "-L-L@PROJECT_BINARY_DIR@/../lib@LIB_SUFFIX@/RelWithDebInfo",
         "-defaultlib=phobos2-ldc,curl,druntime-ldc",
         "-debuglib=phobos2-ldc-debug,curl,druntime-ldc-debug"
     ];
